--- a/src/AzureFunctionsRESTApi.Functions/AzureFunctionsRESTApi.Functions.csproj
+++ b/src/AzureFunctionsRESTApi.Functions/AzureFunctionsRESTApi.Functions.csproj
@@ -20,6 +20,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Handlers\Queries\" />
-    <Folder Include="Queries\" />
+    <Folder Include="Queries\Response\" />
   </ItemGroup>
 </Project>
